probando conexion ssh al servidor

--- a/.github/workflows/probando.yml
+++ b/.github/workflows/probando.yml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: desplego en servidor
+run-name: ${{ github.actor }} nuevo tag
 on: 
   push:
     tags:
@@ -7,16 +7,10 @@ on:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "$ID_KEY_HOLANDA" > holanda.pem
+      - run: chmod 400 holanda.pem
+      - run: ssh -oStrictHostKeyChecking=no -i "holanda.pem" $usuario_holanda@$host_holanda 'ls -la'
 
