probando env var en gitlabci

--- a/.github/workflows/probando.yml
+++ b/.github/workflows/probando.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - run: echo "${{ secrets.ID_KEY_HOLANDA }}" > holanda.pem
       - run: chmod 400 holanda.pem
-      - run: ssh -vvv -oStrictHostKeyChecking=no -i "holanda.pem" ${{ secrets.USUARIO_HOLANDA }}@${{ secrets.HOST_HOLANDA }} 'ls -la'
+      - run: scp -oStrictHostKeyChecking=no -i "holanda.pem" app.R ${{ secrets.USUARIO_HOLANDA }}@${{ secrets.HOST_HOLANDA }}:~/tablero/app.R
 
