probando env var en gitlabci

--- a/.github/workflows/probando.yml
+++ b/.github/workflows/probando.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: read
     steps:
+      - uses: actions/checkout@v4
       - run: echo "${{ secrets.ID_KEY_HOLANDA }}" > holanda.pem
       - run: chmod 400 holanda.pem
       - run: scp -oStrictHostKeyChecking=no -i "holanda.pem" app.R ${{ secrets.USUARIO_HOLANDA }}@${{ secrets.HOST_HOLANDA }}:~/tablero/app.R
