--- a/.github/workflows/probando-otro.yml
+++ b/.github/workflows/probando-otro.yml
@@ -1,9 +1,9 @@
-name: desplego en servidor
+name: desplego automatizador en servidor
 run-name: ${{ github.actor }} nuevo tag para automatizador
 on: 
   push:
     tags:
-      - "automatizador.*"
+      - "automatizador*"
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
