--- a/.github/workflows/probando.yml
+++ b/.github/workflows/probando.yml
@@ -1,9 +1,9 @@
-name: desplego en servidor
+name: desplego shiny en servidor
 run-name: ${{ github.actor }} nuevo tag para front
 on: 
   push:
     tags:
-      - "front.*"
+      - "front*"
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
