--- a/.github/workflows/probando-otro.yml
+++ b/.github/workflows/probando-otro.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - automatizador/**
 jobs:
-  Explore-GitHub-Actions:
+  copiando carpeta:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - run: echo "${{ secrets.ID_KEY_BELGICA }}" > belgica.pem
       - run: chmod 400 belgica.pem
-      - run: scp -r -oStrictHostKeyChecking=no -i "belgica.pem" automatizador/ ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }}:~/automatizador/
+      - run: scp -r -oStrictHostKeyChecking=no -i "belgica.pem" automatizador/ ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }}:~/
 
