--- a/.github/workflows/probando.yml
+++ b/.github/workflows/probando.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - front/**
 jobs:
-  copiando archivo:
+  copiando:
     runs-on: ubuntu-latest
     permissions:
       contents: read
