--- a/.github/workflows/probando-otro.yml
+++ b/.github/workflows/probando-otro.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - run: echo "${{ secrets.ID_KEY_BELGICA }}" > belgica.pem
       - run: chmod 400 belgica.pem
-      - run: scp -r -oStrictHostKeyChecking=no -i "belgica.pem" automatizador/ ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }}:~/
+      - run: scp -oStrictHostKeyChecking=no -i "belgica.pem" automatizador/*.py ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }}:~/automatizador/
 
