--- a/.github/workflows/probando-otro.yml
+++ b/.github/workflows/probando-otro.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v4
       - run: echo "${{ secrets.ID_KEY_BELGICA }}" > belgica.pem
       - run: chmod 400 belgica.pem
-      - run: ssh -oStrictHostKeyChecking=no -i "belgica.pem" ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }} 'rm ~/automatizador/*'
+      - run: ssh -oStrictHostKeyChecking=no -i "belgica.pem" ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }} 'rm -f ~/automatizador/*'
       - run: scp -oStrictHostKeyChecking=no -i "belgica.pem" automatizador/*.py ${{ secrets.USUARIO_BELGICA }}@${{ secrets.HOST_BELGICA }}:~/automatizador/
 
